1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (lang_yacc_finish): Generate and dist a `.h' for a
	`.y' iff YFLAGS or AM_YFLAGS contain `-d'.
	Reported by Jim Meyering <meyering@ascend.com>

	* automake.in (lang_yacc_finish): $hname must not contain a `.'.

1999-04-10  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (EXTRA_DIST): New macro.
	* ChangeLog.1996, ChangeLog.1998: New files.

1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_source_transform): Handle dist and nodist
	prefixes.
	(initialize_per_input): Initialize dist_sources.
	(check_libobjs_sources): Handle dist and nodist prefixes.
	(generate_makefile): Define DIST_SOURCES.
	* dist-vars.am (DISTFILES): Reference DIST_SOURCES, not SOURCES.

	* automake.texi (Macros): Mention AM_PROG_GCJ.
	(Java Support): New node.
	(Dist): Documented dist_ and nodist_ prefixes.

	* m4/gcj.m4 (AM_PROG_GCJ): Renamed from AC_PROG_GCJ.

	* automake.in (lang_java_finish): Generate .lo rule for `.java'
	files, not `.gcj' files.

	* m4/gcj.m4: New file.
	* m4/Makefile.am (m4data_DATA): Added gcj.m4.

	* automake.in: Register the `java' language.
	(resolve_linker): Handle GCJLINK.
	(lang_java_rewrite): New function.
	(LANG_IGNORE, LANG_PROCESS, LANG_SUBDIR): New constants.
	(lang_c_rewrite): Use new constants.
	(lang_cxx_rewrite): Likewise.
	(lang_header_rewrite): Likewise.
	(lang_yacc_rewrite): Likewise.
	(lang_yaccxx_rewrite): Likewise.
	(lang_lex_rewrite): Likewise.
	(lang_lexxx_rewrite): Likewise.
	(lang_asm_rewrite): Likewise.
	(lang_f77_rewrite): Likewise.
	(lang_ppf77_rewrite): Likewise.
	(lang_ratfor_rewrite): Likewise.
	(lang_objc_rewrite): Likewise.
	(handle_single_transform_list): Likewise.  Handle LANG_SUBDIR
	return from rewrite function.
	(lang_java_finish): New function.
	(register_language): Changed interface and all calls.  Added
	`autodep' settings to various languages.
	(handle_dependencies): Use `autodep' property of language when
	including dependency-tracking code.
