@@ -1,5 +1,9 @@
 1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* remake-hdr.am: Create the stamp file before the header file,
+	and just rename it after, so that the timestamps will be correct.
+	Reported by Marc Horowitz <marc@mit.edu>
+
 	* automake.in (lang_yacc_finish): Generate and dist a `.h' for a
 	`.y' iff YFLAGS or AM_YFLAGS contain `-d'.
 	Reported by Jim Meyering <meyering@ascend.com>
